--- a/donation.html
+++ b/donation.html
@@ -280,7 +280,7 @@
         <h3><i class="fas fa-qrcode"></i> Scan to Donate</h3>
         <p>Use any UPI app like PhonePe, Google Pay, Paytm, or BHIM</p>
         
-        <img class="qr" src="images/upi-qr-code.png" alt="Scan to Donate QR Code">
+        <img class="qr" src="images/QR.jpg" alt="Scan to Donate QR Code">
 
         <div class="upi-info">
           <strong>UPI ID</strong>
