--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
       
       <img
         class="event-thumbnail"
-        src="images/NGO3.jpg"
+        src="images/FD1.jpg"
         alt="Preparing for our first distribution drive"
         loading="lazy"
       >
