--- a/index.html
+++ b/index.html
@@ -406,7 +406,7 @@
     </div>
     
     <div class="btn-container">
-      <a href="donate.html" class="btn"><i class="fas fa-donate"></i> Donate Now</a>
+      <a href="donation.html" class="btn"><i class="fas fa-donate"></i> Donate Now</a>
       <a href="#volunteer" class="btn"><i class="fas fa-user-plus"></i> Volunteer Registration</a>
     </div>
   </div>
