--- a/donation.html
+++ b/donation.html
@@ -280,7 +280,7 @@
         <h3><i class="fas fa-qrcode"></i> Scan to Donate</h3>
         <p>Use any UPI app like PhonePe, Google Pay, Paytm, or BHIM</p>
         
-        <img class="qr" src="images/QR.jpg" alt="Scan to Donate QR Code">
+        <img class="qr" src="images/QR.jpeg" alt="Scan to Donate QR Code">
 
         <div class="upi-info">
           <strong>UPI ID</strong>
@@ -290,7 +290,7 @@
           Harshit Sharma
         </div>
         
-        <p class="note">For receipts or any donation-related queries, please WhatsApp us at +91 76648 62324 with your transaction details.</p>
+        <p class="note">For receipts or any donation-related queries, please WhatsApp us at +91 80000 43994 with your transaction details.</p>
       </div>
     </div>
 
