--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
       left: 0;
       width: 100%;
       height: 100%;
-      background: url('images/header-bg.jpg') center/cover;
+      background: url('images/watermark.jpg') center/cover;
       opacity: 0.2;
       z-index: 0;
     }
